--- a/templates/files/clearance-files.html
+++ b/templates/files/clearance-files.html
@@ -17,10 +17,12 @@
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="text-right">
-                                        <a href="/admin/files/clearancefile/add" 
-                                            class="btn btn-sm bg-cyan waves-effect">
-                                            Add Clearance File
-                                        </a>
+                                        {% if perms.files.add_clearancefile %}
+                                            <a href="/admin/files/clearancefile/add" 
+                                                class="btn btn-sm bg-cyan waves-effect">
+                                                Add Clearance File
+                                            </a>
+                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
@@ -73,10 +75,14 @@
                                                                 {% endif %}
                                                             </div>
                                                             <div class="modal-footer">
-                                                                <a href="/admin/files/clearancefile/{{ file.id }}/change"
-                                                                    class="btn btn-sm btn-success">Edit</a>
-                                                                <a href="/admin/files/clearancefile/{{ file.id }}/delete"
-                                                                    class="btn btn-sm btn-danger">Delete</a>
+                                                                {% if perms.files.change_clearancefile %}
+                                                                    <a href="/admin/files/clearancefile/{{ file.id }}/change"
+                                                                        class="btn btn-sm btn-success">Edit</a>
+                                                                {% endif %}
+                                                                {% if perms.files.delete_clearancefile %}
+                                                                    <a href="/admin/files/clearancefile/{{ file.id }}/delete"
+                                                                        class="btn btn-sm btn-danger">Delete</a>
+                                                                {% endif %}
                                                             </div>
                                                         </div>
                                                     </div>
