--- a/templates/operations/clearances.html
+++ b/templates/operations/clearances.html
@@ -100,10 +100,14 @@
                                                                 {% endif %}
                                                             </div>
                                                             <div class="modal-footer">
-                                                                <a href="/admin/operations/clearance/{{ clearance.id }}/change"
-                                                                    class="btn btn-sm btn-success">Edit</a>
-                                                                <a href="/admin/operations/clearance/{{ clearance.id }}/delete"
-                                                                    class="btn btn-sm btn-danger">Delete</a>
+                                                                {% if perms.operations.change_clearance %}
+                                                                    <a href="/admin/operations/clearance/{{ clearance.id }}/change"
+                                                                        class="btn btn-sm btn-success">Edit</a>
+                                                                {% endif %}
+                                                                {% if perms.operations.delete_clearance %}
+                                                                    <a href="/admin/operations/clearance/{{ clearance.id }}/delete"
+                                                                        class="btn btn-sm btn-danger">Delete</a>
+                                                                {% endif %}
                                                             </div>
                                                         </div>
                                                     </div>
