--- a/templates/operations/interpols.html
+++ b/templates/operations/interpols.html
@@ -84,10 +84,14 @@
                                                                 {% endif %}
                                                             </div>
                                                             <div class="modal-footer">
-                                                                <a href="/admin/operations/interpol/{{ interpol.id }}/change"
-                                                                    class="btn btn-sm btn-success">Edit</a>
-                                                                <a href="/admin/operations/interpol/{{ interpol.id }}/delete"
-                                                                    class="btn btn-sm btn-danger">Delete</a>
+                                                                {% if perms.operations.change_interpol %}
+                                                                    <a href="/admin/operations/interpol/{{ interpol.id }}/change"
+                                                                        class="btn btn-sm btn-success">Edit</a>
+                                                                {% endif %}
+                                                                {% if perms.operations.delete_interpol %}
+                                                                    <a href="/admin/operations/interpol/{{ interpol.id }}/delete"
+                                                                        class="btn btn-sm btn-danger">Delete</a>
+                                                                {% endif %}
                                                             </div>
                                                         </div>
                                                     </div>
