--- a/templates/others/recruitments.html
+++ b/templates/others/recruitments.html
@@ -17,10 +17,12 @@
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="text-right">
-                                        <a href="/admin/others/recruitment/add" 
-                                            class="btn btn-sm bg-cyan waves-effect">
-                                            Add Recruitment
-                                        </a>
+                                        {% if perms.others.add_recruitment %}
+                                            <a href="/admin/others/recruitment/add" 
+                                                class="btn btn-sm bg-cyan waves-effect">
+                                                Add Recruitment
+                                            </a>
+                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
@@ -86,10 +88,14 @@
                                                                 {% endif %}
                                                             </div>
                                                             <div class="modal-footer">
-                                                                <a href="/admin/others/recruitment/{{ recruitment.id }}/change"
-                                                                    class="btn btn-sm btn-success">Edit</a>
-                                                                <a href="/admin/others/recruitment/{{ recruitment.id }}/delete"
-                                                                    class="btn btn-sm btn-danger">Delete</a>
+                                                                {% if perms.others.change_recruitment %}
+                                                                    <a href="/admin/others/recruitment/{{ recruitment.id }}/change"
+                                                                        class="btn btn-sm btn-success">Edit</a>
+                                                                {% endif %}
+                                                                {% if perms.others.delete_recruitment %}
+                                                                    <a href="/admin/others/recruitment/{{ recruitment.id }}/delete"
+                                                                        class="btn btn-sm btn-danger">Delete</a>
+                                                                {% endif %}
                                                             </div>
                                                         </div>
                                                     </div>
