--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -25,7 +25,7 @@
                 <div class="col-sm-6 text-center align-center">
                     <div class="card" style="padding-top:5%;padding-bottom:5%">
                         <div class="card-header">
-                            <h1 class="card-title">Login to Recruitment CMS</h1>
+                            <img src="{% static 'logo.png' %}" width="50%" alt="Main logo" />
                         </div>
                         <div class="card-body">
                             <form method="post">
